# PgIt

./: .gitignore  Makefile  README.md  logging.conf  pgit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/: pgit.py
src/pgit/: __main__.py  pgit.py
