[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgit"
version = "0.1.0"
description = "PGIT allows you to put a progress bar in your Python program."
readme = "README.md"
authors = [
    { name = "Dr Mokira", email = "dr.mokira@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["progress-bar", "terminal-based"]
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/mokira3d48/pgit"

[tool.setuptools.packages.find]
where = ["src"]

