[metadata]
name = pgit
version = 0.1.0
author = Arnold Mokira
author_email = dr.mokira@gmail.com
description = Progress iterator for feed back program execution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mokira3d48/pgit
project_urls =
    repository = https://github.com/mokira3d48/pgit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
